| Summary: | ASTERISK-25390: default_from_user can crash with certain configuration backends | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-09-10 09:51:01 | Date Closed: | 2015-09-10 12:12:28 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The recently-added default_from_user option was implemented in such a way that certain backend configuration storage methods (e.g. a database) resulted in a crash. This was because the global configuration structure is short-lived enough to result in referencing freed memory.
The retrieved default_from_user needs to be copied out of the global configuration structure so that a crash does not occur. | ||
| Comments: | |||